Bug 151384 - Character Style "Internet Link" disappears after export from DOC to DOCX (you should use RU UI in LibreOffice!)
Summary: Character Style "Internet Link" disappears after export from DOC to DOCX (you...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Styles DOC-Styles
  Show dependency treegraph
 
Reported: 2022-10-06 14:09 UTC by Roman Kuznetsov
Modified: 2022-11-02 02:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example (26.00 KB, application/msword)
2022-10-06 14:09 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2022-10-06 14:09:05 UTC
Description:
Hyperlink symbol style is disappeared after export to DOCX

Steps to Reproduce:
1. Open file from attach -> hyperlink looks as should (blue font color and underlined)
2. Save it as DOCX
3. Open the DOCX file -> hyperlink looks as just text (black color and no underline)

Actual Results:
Hyperlink symbol style is disappeared after export to DOCX

Expected Results:
Hyperlink symbol style is still here after export to DOCX


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 85353c42de80e7492f5c80499e18375f942c75c9
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

and in

Version: 7.1.0.3 (x86) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

but not in

Version: 6.4.5.2 (x86)
Build ID: a726b36747cf2001e06b58ad5db1aa3a9a1872d6
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: ru-RU
Calc: threaded

regression here
Comment 1 Roman Kuznetsov 2022-10-06 14:09:25 UTC
Created attachment 182872 [details]
Example
Comment 2 Roman Kuznetsov 2022-10-07 10:52:59 UTC
Note: if you will try test it with EN UI in LibreOffice then you will not see the problem! I get the problem when I use RU language for LibreOffice's UI
Comment 3 Roman Kuznetsov 2022-10-07 11:20:19 UTC
I bisected it in win64-7.0 bisect repo and got

https://git.libreoffice.org/core/commit/d57b4480903f700ad7c95e885b9dd0ace5883cfc

https://gerrit.libreoffice.org/c/core/+/83676

Add to CC: Tünde Tóth

Please take a look. Thanks
Comment 4 Dieter 2022-10-24 06:55:12 UTC
Tested with

Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: ru-RU
Calc: CL

REsult:
Character style "Internet Link" gets lost after saving as docx (ussing Russian RU)
Comment 5 Commit Notification 2022-10-27 16:10:25 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2dfd9e3e00f6e57ab1b307cf57c01a0830da4b17

tdf#151384 DOCX export: lost hyperlink format in localized UI

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-10-28 07:49:08 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: ru-RU
Calc: CL threaded
Comment 7 Roman Kuznetsov 2022-10-28 16:56:00 UTC
Confirm the fix in

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Thank you, Tünde!
Comment 8 Commit Notification 2022-11-02 02:03:18 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/a04ed691ea3f4891c98e7dde0344d461cb9def18

tdf#151384 DOCX export: lost hyperlink format in localized UI

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.