tdf#151384 DOCX export: lost hyperlink format in localized UI

Fix losing color and underline of hyperlinks in localized
builds, at least with Russian UI.

Regression from commit d57b4480903f700ad7c95e885b9dd0ace5883cfc
"tdf#127579 DOCX export: fix losing color and underline of ODT hyperlinks".

Change-Id: I1eebcf58a7071226e80df3f84ed1264c5a8baf31
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141761
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>